# aec_agentic

./: .env.example  .gitignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  CURRENT_STATE.md  DATA_CLASSIFICATION.md  Directory.Build.props  Directory.Packages.props  LEGACY_PATH_SCAN.txt  LICENSE  LICENSE_INVENTORY.md  MIGRATION_INVENTORY.md  README.md  SECURITY.md  conftest.py  docker-compose.yml  package.json  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci.yml
.organism/: decisions.md  manifest.yaml  repo_profile.md  risks.md  skills_used.md  tasks.md
.organism/agents/: critic.md  executor.md  memory-curator.md  planner.md  researcher.md
.organism/governance/: change-policy.md  permissions.md  risk-levels.md
.organism/identity/: constraints.md  doctrine.md  mission.md  values.md
.organism/methodologies/: mission-cycle.md
.organism/runtime/: README.md  model-routes.yaml
.organism/schemas/: artifact-metadata.schema.json  mission-state.schema.json  tool-call-event.schema.json
agents/billing-readiness/: manifest.yaml
agents/evidence-verifier/: manifest.yaml
agents/requirement-classifier/: instructions.md  manifest.yaml
agents/work-package-planner/: instructions.md  manifest.yaml
apps/connector-runner/: pyproject.toml
apps/control-plane-api/: Dockerfile  README.md  alembic.ini  requirements.txt
apps/control-plane-cli/: pyproject.toml
apps/control-plane-worker/: pyproject.toml
apps/revit-addin/: README.md
apps/web-console/: README.control-plane.md  README.md  index.html  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts
connectors/filesystem/: manifest.yaml
connectors/revit-local/: manifest.yaml
docs/adr/: 0001-monorepo.md  0002-modular-monolith.md  0003-agents-propose-commands.md  0004-organism-persistent-local-cognition.md
docs/architecture/: REPOSITORY_ARCHITECTURE.md
scripts/: bootstrap.ps1  clean.ps1  db.ps1  dev.ps1  generate-contracts.ps1  lint.ps1  migrate.ps1  organism.ps1  package-revit.ps1  release.ps1  seed.ps1  smoke.ps1  test.ps1
(+656 files in other folders)
