[project]
name = "aec-agentic-control-plane"
version = "0.1.0"
description = "AEC Agentic Control Plane monorepo."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
testpaths = [
  "apps/control-plane-api/tests",
  "packages/python/control-plane-core/tests",
  "packages/python/policy-engine/tests"
]
pythonpath = [
  "apps/control-plane-api",
  "packages/python/control-plane-core/src",
  "packages/python/policy-engine/src",
  "packages/python/evidence-engine/src",
  "packages/python/organism-runtime/src",
  "packages/python/agent-runtime/src",
  "packages/python/connector-sdk/src",
  "packages/python/reporting/src"
]

[tool.ruff]
line-length = 100
target-version = "py311"
