[project]
name = "aec-agentic-control-plane"
version = "0.1.0"
description = "AEC Agentic Control Plane monorepo."
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
# One command discovers every suite. `tests/` holds the fast unit/contract/
# conformance/architecture suite; `apps/control-plane-api/tests` is the migrated
# EMA suite, auto-marked `integration` by conftest.py and deselected by default
# so `pytest` (and a no-Docker CI lane) is green. Run the DB suite explicitly
# with `-m integration` (or `scripts/test.ps1 -Integration`).
testpaths = [
  "tests",
  "apps/control-plane-api/tests"
]
addopts = ["--strict-markers", "-m", "not integration"]
markers = [
  "integration: requires a live PostgreSQL database (migrated EMA suite)",
  "noauth: exercise the real auth dependency (skip the test-identity injection)",
]
pythonpath = [
  "apps/control-plane-api",
  "packages/python/control-plane-core/src",
  "packages/python/policy-engine/src",
  "packages/python/evidence-engine/src",
  "packages/python/organism-runtime/src",
  "packages/python/agent-runtime/src",
  "packages/python/connector-sdk/src",
  "packages/python/reporting/src"
]

[tool.ruff]
line-length = 100
target-version = "py311"
